update styles for logo

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,13 +13,13 @@ header {
 }
 
 .logo-container {
-    position: absolute;
-    top: 10px;
-    left: 10px;
+    width: 100%;
+    text-align: center;
+    margin: 10px 0;
 }
 
 .logo {
-    width: 100px; /* Adjust the size of the logo as needed */
+    width: 250px;
 }
 
 .navbar-container {
