--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,6 @@ body {
 }
 
 header {
-    background-color: #333;
     color: white;
     text-align: center;
     padding: 10px 0;
@@ -19,7 +18,7 @@ header {
 }
 
 .logo {
-    width: 250px;
+    width: 800px;
 }
 
 .navbar-container {
@@ -40,13 +39,14 @@ nav ul li {
 }
 
 nav ul li a {
-    color: white;
+    color: black;
     text-decoration: none;
     font-size: 1.2em;
 }
 
 nav ul li a:hover {
     text-decoration: underline;
+	color: green;
 }
 
 main {
