--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,6 +28,14 @@ header {
   padding-bottom: 60px;
 }
 
+.hamburger-menu {
+    display: none;
+    font-size: 1.5em;
+    font-color: black;
+    color: black;
+    cursor: pointer;
+}
+
 .navbar-container {
     border-top: 5px solid darkgreen;
     padding-top: 20px;
@@ -86,3 +94,21 @@ footer {
     bottom: 0;
 }
 
+@media (max-width: 768px) {
+    .logo {
+      width: 90%;
+  }
+    .hamburger-menu {
+        display: block;
+    }
+    .navbar-container {
+        display: none;
+    }
+    nav ul {
+        flex-direction: column;
+        text-align: center;
+    }
+    nav ul li {
+        margin: 10px 0;
+    }
+}
