--- a/en/partials/home.html
+++ b/en/partials/home.html
@@ -2,56 +2,37 @@
  
 <h1>Hampur fyrir framtíðina</h1> 
 
-<h2>
-October 11-12, 2024 | Kópavogur, Iceland
-</h2>
-  <h3>
-Organized by the Icelandic Hemp Association
-    </h3>
-  <p>
-Welcome to the official website of "Hemp for the Future" (i. Hampur fyrir framtíðina), a premier conference dedicated to exploring the vast potential of industrial hemp and medical cannabis. This year's conference will be held on October 11-12, 2024, in the vibrant Capital Region of Reykjavík, Iceland
-    </p>
+<h2>October 11-12, 2024 | Kópavogur, Iceland</h2>
+<h3>Organized by the Icelandic Hemp Association</h3>
+<p>Welcome to the official website of "Hemp for the Future" (i. Hampur fyrir framtíðina), a premier conference dedicated to exploring the vast potential of industrial hemp and medical cannabis. This year's conference will be held on October 11-12, 2024, in the vibrant Capital Region of Reykjavík, Iceland</p>
 
 <h3>About the Conference</h3>
-  <p>
-The Icelandic Hemp Association is proud to announce the second "Hemp for the Future" conference, building on the success of our inaugural event in 2019. Our goal is to bring forward the legalization of medical cannabis, and to foster discussions on the possibilities, benefits, and market opportunities within the hemp and cannabis sectors by bringing together industry leaders, policymakers, researchers, industry professionals and enthusiasts.
-    </p>
+<p>The Icelandic Hemp Association is proud to announce the second "Hemp for the Future" conference, building on the success of our inaugural event in 2019. Our goal is to bring forward the legalization of medical cannabis, and to foster discussions on the possibilities, benefits, and market opportunities within the hemp and cannabis sectors by bringing together industry leaders, policymakers, researchers, industry professionals and enthusiasts.</p>
 
  
-<h3>
-Conference Highlights
-  </h3>
+<h3>Conference Highlights</h3>
 <b>Industrial:</b> Hemp: Discover the latest advancements in industrial hemp, including sustainable farming practices, innovative product development, and environmental benefits.
-  <br>
+<br>
 <b>Medical Cannabis:</b> Learn about the therapeutic potentials of medical cannabis, ongoing research, and the implications of legalization for healthcare and patients.
-  <br>
+<br>
 <b>Legalization and Policy:</b> Engage with experts on the current and future legal landscape, exploring the benefits and challenges of legalization.
-  <br>
+<br>
 <b>Market Opportunities:</b> Network with entrepreneurs and investors to uncover new business prospects in the rapidly growing hemp and cannabis industries.
-  <br>
+<br>
 
-<h3>
-Why Attend?
-</h3>
+<h3>Why Attend?</h3>
 <b>Expert Speakers:</b>  Hear from a diverse lineup of speakers who are at the forefront of the hemp and cannabis industries.
-  <br>
+<br>
 <b>Networking Opportunities:</b>  Connect with professionals and like-minded individuals from around the world.
-  <br>
+<br>
 <b>Cutting-edge Insights:</b>  Gain valuable knowledge and insights into the latest trends and research.
-  <br>
+<br>
 <b>Market Opportunities:</b>  Network with entrepreneurs and investors to uncover new business prospects in the rapidly growing hemp and cannabis industries. Explore how the legalization of medical cannabis can unlock significant market potential and drive economic growth, creating a thriving ecosystem for innovation and investment.
-  <br>
+<br>
 
-<h2>Join Us in Iceland
-    </h2>
-  <p>
-We invite you to join us in the Capital Region of Reykjavík for two days of insightful discussions, networking, and discovery. Whether you are an industry expert or new to the field, "Hemp for the Future" promises to provide valuable opportunities and knowledge for all attendees. Join us in our mission to advocate for the legalization of medical cannabis in Iceland and to explore the future of hemp and cannabis.
-</p>
-<p>
-<b>Registration</b> is now open! Secure your spot today and be part of the future of hemp and cannabis.
-  </p>
+<h2>Join Us in Iceland</h2>
+<p>We invite you to join us in the Capital Region of Reykjavík for two days of insightful discussions, networking, and discovery. Whether you are an industry expert or new to the field, "Hemp for the Future" promises to provide valuable opportunities and knowledge for all attendees. Join us in our mission to advocate for the legalization of medical cannabis in Iceland and to explore the future of hemp and cannabis.</p>
+<p><b>Registration</b> is now open! Secure your spot today and be part of the future of hemp and cannabis.</p>
 
-  <p>
-For more information, please contact us at [email address] or visit our [contact page].
-</p>
+<p>For more information, please contact us at [email address] or visit our [contact page].</p>
 </article>
