--- a/partials/speakers.html
+++ b/partials/speakers.html
@@ -1,6 +1,5 @@
 <h2>Speakers</h2>
-        <ul>
-            <li>Speaker 1: Bio and details</li>
-            <li>Speaker 2: Bio and details</li>
-            <!-- Add more speakers as needed -->
-        </ul>
+<ul>
+  <div hx-get="/speakers/stuart.html" class="main-text" hx-trigger="load"></div>
+  <div hx-get="/speakers/stuart.html" class="main-text" hx-trigger="load"></div>
+</ul>
