schedule, speakers, media

--- a/en/partials/media.html
+++ b/en/partials/media.html
@@ -1,2 +1,10 @@
 <h2>Media</h2>
-        <p>Gallery of images and videos from the conference.</p>
+<div class="video">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/hJd1Uqg1rl4?si=8tr4ZhIny5_1ai2Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+<div class="video">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0HvSO1lMVL0?si=IZRjWbqNQg9tufAB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+<div class="video">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/-CJcjxdTcoY?si=1UT1PLeFYL0UCCir" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
