--- a/partials/speakers.html
+++ b/partials/speakers.html
@@ -1,5 +1,15 @@
 <h2>Speakers</h2>
-<ul>
-  <div hx-get="/speakers/stuart.html" class="main-text" hx-trigger="load"></div>
-  <div hx-get="/speakers/stuart.html" class="main-text" hx-trigger="load"></div>
-</ul>
+<div class="speakers">
+<div hx-get="/speakers/bozidar.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/jamie.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/jasna.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/jeff.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/jeremy.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/lumir.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/magnus.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/maren.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/nandol.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/norberto.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/pavel.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/rene.html" class="speaker-text" hx-trigger="load"></div>
+</div>
