--- a/en/partials/speakers.html
+++ b/en/partials/speakers.html
@@ -1,6 +1,15 @@
 <h2>Speakers</h2>
-        <ul>
-            <li>Speaker 1: Bio and details</li>
-            <li>Speaker 2: Bio and details</li>
-            <!-- Add more speakers as needed -->
-        </ul>
+<div class="speakers">
+<div hx-get="/en/speakers/bozidar.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/en/speakers/jamie.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/en/speakers/jasna.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/en/speakers/jeff.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/en/speakers/jeremy.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/en/speakers/lumir.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/en/speakers/magnus.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/en/speakers/maren.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/en/speakers/nandol.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/en/speakers/norberto.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/en/speakers/pavel.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/en/speakers/rene.html" class="speaker-text" hx-trigger="load"></div>
+</div>
