add speaker text

--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -1,7 +1,7 @@
 <div class="schedule-container">
-            <h2>Event Schedule</h2>
+            <h2>Dagskrá</h2>
             <div class="day-schedule">
-                <h3>Day 1 - 11 Október</h3>
+                <h3>Day 1 - 11 Október - Iðnaðarhampur</h3>
                 <table>
                     <thead>
                         <tr>
@@ -50,7 +50,7 @@
                 </table>
             </div>
             <div class="day-schedule">
-                <h3>Day 2 - 12 Október</h3>
+                <h3>Day 2 - 12 Október - Lyfjahampur</h3>
                 <table>
                     <thead>
                         <tr>
