--- a/partials/speakers.html
+++ b/partials/speakers.html
@@ -1,4 +1,4 @@
-<h2>Speakers</h2>
+<h2>Mælendur</h2>
 <div class="speakers">
 <div hx-get="/speakers/bozidar.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/jamie.html" class="speaker-text" hx-trigger="load"></div>
@@ -8,8 +8,10 @@
 <div hx-get="/speakers/lumir.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/magnus.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/maren.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/speakers/nandol.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/nando.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/norberto.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/pavel.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/rene.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/clemmie.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/rachel.html" class="speaker-text" hx-trigger="load"></div>
 </div>
