--- a/en/partials/speakers.html
+++ b/en/partials/speakers.html
@@ -1,15 +1,17 @@
 <h2>Speakers</h2>
 <div class="speakers">
-<div hx-get="/en/speakers/bozidar.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/en/speakers/jamie.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/en/speakers/jasna.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/en/speakers/jeff.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/en/speakers/jeremy.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/en/speakers/lumir.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/en/speakers/magnus.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/en/speakers/maren.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/en/speakers/nandol.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/en/speakers/norberto.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/en/speakers/pavel.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/en/speakers/rene.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/bozidar.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/jamie.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/jasna.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/jeff.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/jeremy.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/lumir.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/magnus.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/maren.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/nando.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/norberto.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/pavel.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/rene.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/clemmie.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/rachel.html" class="speaker-text" hx-trigger="load"></div>
 </div>
