--- a/partials/venue.html
+++ b/partials/venue.html
@@ -1,2 +1,3 @@
-        <h2>Venue</h2>
-        <p>Details about the venue including location, transportation, and accommodation options.</p>
+<h2>Venue</h2>
+  <p>Details about the venue including location, transportation, and accommodation options.</p>
+<a href="https://salurinn.kopavogur.is/">Salurinn</a> í Kópavogi
