update bios, add images, update home

--- a/partials/home.html
+++ b/partials/home.html
@@ -4,13 +4,35 @@
 
 <h2>11.-12. október, 2024 | Kópavogur, Ísland</h2>
 
+<p>Velkomin á vefsíðu ráðstefnunnar Hampur fyrir framtíðina, sem verður nú sett upp í annað sinn á vegum Hampfélagsins. Á þessari tveggja daga ráðstefnu verður fjallað um iðnaðarhamp og landbúnað annars vegar og hins vegar lyfjahamp og höfum við fengið til liðs við okkur fjölmarga sérfræðinga í iðnaðinum, bæði íslenska og erlenda.</p>
+<p>Ráðstefnan fer að þessu sinni fram í Salnum í Kópavogi þann 11. og 12. október en samhliða henni fara fram fjölmargir hliðarviðburðir sem enginn ætti að láta framhjá sér fara.</p>
+  <br>
 
-<p>Velkomin á vefsíðu ráðstefnunnar Hampur fyrir framtíðina sem Hampélgaið stendur fyrir á haustmánuðum 2024. Þetta er önnur ráðstefna Hampfélagsins. </p>
-<p>Ráðstefnan verður haldin í Salnum í Kópavogi og stendur í tvo daga þann 11. og 12. október næstkomandi. Umfjöllunarefnin er tvö; iðnaðarhampur annars vegar og lyfjahampur hins vegar. Fjöldi sérfræðingar í iðnaðinum hafa boðað komu sína, bæði innlendir og erlendir. Samhliða ráðstefnunni verða í boði fjölmargir áhugaverðir hliðarviðburðir.</p>
-<br>
+<h3>Um ráðstefnuna</h3>
 
-<h2>Um ráðstefnuna</h2>
+<p>Hampfélagið kynnir með stolti sína aðra ráðstefnu; Hampur fyrir framtíðina. Fimm ár eru liðin síðan fyrsta ráðstefna félagsins sem fram fór með miklum glæsibrag í ráðstefnusal Grand Hótel. Ráðstefnan verður að þessu sinni haldin í Salnum í Kópavogi og teygir ráðstefnan sig nú yfir tvo daga, þar sem verður fjallað um iðnaðarhamp fyrri daginn og þann seinni um lyfjahamp.</p>
+<p>Með ráðstefnunni vonumst við til að geta opnað frekar á samtalið um möguleikana og tækifærin sem felast í bæði iðnaðar- og lyfjahampi og tengja saman ólíka hagsmunaaðila, á borð við löggjafa- og framkvæmdarvaldið, heilbrigðisstarfsfólk, rannsakendur,  fagfólk í iðnaðinum og landbúnaði sem og annað áhugafólk.</p>
+<p>Athugið að ráðstefnan fer fram á ensku.</p>
+  <br>
 
-<p>Hampfélagið kynnir með stolti sína aðra ráðstefnu; Hampur fyrir framtíðina. Fimm ár eru liðin síðan fyrsta ráðstefna félagsins fór fram með miklum glæsibrag í ráðstefnusal Grand Hótel. Að þessu sinni verður ráðstefnan haldin í Salnum í Kópavogi og teygir ráðstefnan sig nú yfir tvo daga, þar sem fjallað verður um iðnaðarhamp fyrri daginn og lyfjahamp þann seinni. </p>
-<p>Með ráðstefnunni vonumst við til að geta opnað á frekara á samtal um þá möguleika og tækifæri sem felast í iðnaðar- og lyfjahampi. Markmiðið er tengja saman ólíka hagsmunaaðila meðal annars löggjafar- og framkvæmdavaldið, heilbrigðisstarfsfólk, rannsakendur, fagfólk í iðnaðinum sem og áhugafólk</p>
+<h3>Megin áherslur ráðstefnunnar</h3>
+<p><b>Iðnaðarhampur: </b>Fjallað verður um þróun og nýjungar á vettvangi iðanaðarhampsins, m.a. sjálfbærni í ræktun, umhverfislegan ávinning og vöruþróunar möguleika.</p>
+<p><b>Lyfjahampur: </b>Í umfjöllun um lyfjahamp verður sérstaklega horft til þeirra rannsókna sem staðið hafa yfir undanfarin ár og standa enn yfir. Fjallað verður um meðferðarmöguleika tengda lyfjahampi og áhrif þess að hann sé gerður aðgengilegur fyrir sjúklinga.</p>
+<p><b>Lögleiðing og stefnumótun: </b>Farið verður yfir lagalegt umhverfi bæði hamps og lyfjahamps og fjallað um áhrif lagabreytinga á samfélagið í heild; ríkið, heilbrigðiskerfið og sjúklinga. Horft verður til þess hvaða áskoranir blasa við og hver ávinningurinn er af breyttu lagaumhverfi.</p>
+<p><b>Markaðstækifæri: </b>Frumkvöðlar sem og reynsluboltar úr iðnaðinum varpa ljósi á þau tækifæri sem felast í hinum ört vaxandi iðnaðar- og lyfjahampiðnaði.</p>
+  <br>
+
+<h3>Hvers vegna að taka þátt?</h3>
+<p><b>Fræðsla: </b>Á ráðstefnunni færðu tækifæri til þess að hlýða á fjölbreytta fyrirlestra og umræður alþjóðlegra sérfræðinga úr greininni. Allir mælendur ráðstefnunnar eiga það sameiginlegt að hafa aflað sér sérþekkingar á iðnaðar- og/eða lyfjahampi, hver á sínu sviði, og er óhætt að segja að allt áhugafólk um hampinn muni finna bæði fyrirlestra um umræður við sitt hæfi.</p>
+<p><b>Tengslamyndun: </b>Á ráðstefnunni og á hliðarviðburðum hennar gefst þátttakendum og sérfræðingum einstakt tækifæri til að stækka tengslanetið sitt og kynnast öðrum hampunnendum.</p>
+<p><b>Framtíðarmöguleikar: </b>Með fræðslu fæðast tækifærin. Á ráðstefnunni færðu innblástur til að skapa eitthvað nýtt og hugmyndir að nýjum framtíðar markaðstækifærum. Þú færð tækifæri til að komast í kynni við bæði aðra þátttakendur ráðstefnunnar og mælendur; deila reynslusögum og fá góð ráð.</p>
+  <br>
+
+<h3>Vertu með!</h3>
+<p>Hampur fyrir framtíðina er einstakt tækifæri fyrir alla hampunendur til að fræðast og stækka tengslanetið sitt. Hvort sem þú ert sérfræðingur í greininni eða nýliði mun þátttaka á ráðstefnunni veita þær ómetanleg tækifæri og dýrmæta þekkingu. Vertu með í baráttunni fyrir lögleiðingu lyfjahamps á Íslandi og framþróun iðnaðar- og lyfjahamps.</p>
+  <br>
+
+<p><b>Skráning er hafin! </b>Tryggðu þér miða og leggðu þar með þitt af mörkum í framþróun iðnaðar- og lyfjahamps.</p>
+  <br>
+  <p>Fyrir frekari upplýsingar hafið samband við [email address] eða skoðið heimasíðu okkar [contact page].</p>
 </article>
