--- a/styles/styles.css
+++ b/styles/styles.css
@@ -124,6 +124,21 @@ footer {
     margin: 0 -20px;
 }
 
+.category {
+    margin-bottom: 40px;
+}
+
+.category h3 {
+    background-color: darkgreen;
+    color: white;
+    padding: 10px;
+    margin: 0 -20px;
+}
+
+.video {
+    margin: 20px 0;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
@@ -139,6 +154,38 @@ table th {
     background-color: #f2f2f2;
 }
 
+.speaker-bio {
+    display: flex;
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    background-color: #f9f9f9;
+}
+
+.bio-image {
+    flex: 1;
+    margin-right: 20px;
+}
+
+.bio-image img {
+    max-width: 100%;
+    border-radius: 10px;
+}
+
+.bio-text {
+    flex: 2;
+}
+
+.bio-text h2 {
+    color: darkgreen;
+    margin-bottom: 10px;
+}
+
+.bio-text p {
+    margin-bottom: 10px;
+}
 
 @media (max-width: 768px) {
     .logo {
@@ -159,5 +206,19 @@ table th {
     }
   .day-schedule h3 {
         margin: 0;
+    }
+  .category h3 {
+        margin: 0;
+    }
+  .speaker-bio {
+        flex-direction: column;
+        text-align: center;
+    }
+    .bio-image {
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+    .bio-text {
+        text-align: left;
     }
 }
