--- a/en/partials/schedule.html
+++ b/en/partials/schedule.html
@@ -1,99 +1,89 @@
 <div class="schedule-container">
-            <h2>Event Schedule</h2>
+            <h2>Dagskrá</h2>
             <div class="day-schedule">
-                <h3>Day 1 - 11 Október</h3>
+                <h3>Day 1 - 11 Október - Industrial Hemp</h3>
                 <table>
                     <thead>
                         <tr>
                             <th>Time</th>
-                            <th>Event</th>
-                            <th>Location</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>9:00 AM - 10:00 AM</td>
-                            <td>Registration</td>
-                            <td>Main Hall</td>
-                        </tr>
-                        <tr>
-                            <td>10:00 AM - 11:00 AM</td>
-                            <td>Opening Keynote</td>
-                            <td>Conference Room A</td>
-                        </tr>
-                        <tr>
-                            <td>11:00 AM - 12:00 PM</td>
-                            <td>Workshop: Innovation in Tech</td>
-                            <td>Conference Room B</td>
-                        </tr>
-                        <tr>
-                            <td>12:00 PM - 1:00 PM</td>
-                            <td>Lunch Break</td>
-                            <td>Dining Area</td>
-                        </tr>
-                        <tr>
-                            <td>1:00 PM - 2:00 PM</td>
-                            <td>Panel Discussion: Future of AI</td>
-                            <td>Conference Room A</td>
-                        </tr>
-                        <tr>
-                            <td>2:00 PM - 3:00 PM</td>
-                            <td>Networking Session</td>
-                            <td>Main Hall</td>
-                        </tr>
-                        <tr>
-                            <td>3:00 PM - 4:00 PM</td>
-                            <td>Closing Remarks</td>
-                            <td>Conference Room A</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="day-schedule">
-                <h3>Day 2 - 12 Október</h3>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Time</th>
-                            <th>Event</th>
-                            <th>Location</th>
+                            <th>Event/Speaker</th>
+                            <th>Topic</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>8:30 AM - 9:00 AM</td>
-                            <td>Breakfast and Networking</td>
-                            <td>Dining Area</td>
+                            <td>Coffee</td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>10:00 AM - 11:00 AM</td>
-                            <td>Keynote: The Future of Robotics</td>
-                            <td>Conference Room A</td>
+                            <td>9:00 AM - 11:45 AM</td>
+                            <td>TBD</td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>11:00 AM - 12:00 PM</td>
-                            <td>Workshop: Cybersecurity</td>
-                            <td>Conference Room B</td>
+                            <td>11:45 AM - 12:45 PM</td>
+                            <td>Lunch</td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>12:00 PM - 1:00 PM</td>
-                            <td>Lunch Break</td>
-                            <td>Dining Area</td>
+                            <td>12:45 PM - 2:55 PM</td>
+                            <td>TBD</td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>1:00 PM - 2:00 PM</td>
-                            <td>Panel: Women in Tech</td>
-                            <td>Conference Room A</td>
+                            <td>2:55 PM - 3:20 PM</td>
+                            <td>Coffee</td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>2:00 PM - 3:00 PM</td>
-                            <td>Interactive Session: AR/VR</td>
-                            <td>Conference Room B</td>
+                            <td>3:20 PM - 5:40 PM</td>
+                            <td>TBD</td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="day-schedule">
+                <h3>Day 2 - 12 Október - Lyfjahampur</h3>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Tími</th>
+                            <th>Viðburður</th>
+                            <th>Staðsetning</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>8:30 AM - 9:00 AM</td>
+                            <td>Coffee</td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>3:00 PM - 4:00 PM</td>
-                            <td>Closing Ceremony</td>
-                            <td>Main Hall</td>
+                            <td>9:00 AM - 11:45 AM</td>
+                            <td>TBD</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>11:45 AM - 12:45 PM</td>
+                            <td>Lunch</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>12:45 PM - 2:55 PM</td>
+                            <td>TBD</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>2:55 PM - 3:20 PM</td>
+                            <td>Coffee</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>3:20 PM - 5:40 PM</td>
+                            <td>TBD</td>
+                            <td></td>
                         </tr>
                     </tbody>
                 </table>
