--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -7,44 +7,39 @@
                         <tr>
                             <th>Tími</th>
                             <th>Viðburður</th>
-                            <th>Staðsetning</th>
+                            <th>Umræðuefni</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>8:30 - 9:00</td>
                             <td>Skráning & Kaffi</td>
-                            <td>Main Hall</td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>10:00 AM - 11:00 AM</td>
-                            <td>Opening Keynote</td>
-                            <td>Conference Room A</td>
+                            <td>9:00 - 11:45</td>
+                            <td>Tilkynnt síðar</td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>11:00 AM - 12:00 PM</td>
-                            <td>Workshop: Innovation in Tech</td>
-                            <td>Conference Room B</td>
-                        </tr>
-                        <tr>
-                            <td>11:45 - 12:45 PM</td>
+                            <td>11:45 - 12:45</td>
                             <td>Hádegismatur</td>
-                            <td>Móttaka</td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>1:00 PM - 2:00 PM</td>
-                            <td>Panel Discussion: Future of AI</td>
-                            <td>Conference Room A</td>
+                            <td>12:45 - 14:55</td>
+                            <td>Tilkynnt síðar</td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>2:00 PM - 3:00 PM</td>
-                            <td>Networking Session</td>
-                            <td>Main Hall</td>
+                            <td>14:55 - 15:20</td>
+                            <td>Kaffi</td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>3:00 PM - 4:00 PM</td>
-                            <td>Closing Remarks</td>
-                            <td>Conference Room A</td>
+                            <td>15:20 - 17:40</td>
+                            <td>Tilkynnt síðar</td>
+                            <td></td>
                         </tr>
                     </tbody>
                 </table>
@@ -62,38 +57,33 @@
                     <tbody>
                         <tr>
                             <td>8:30 - 9:00</td>
-                            <td>Breakfast and Networking</td>
-                            <td>Dining Area</td>
+                            <td>Skráning & Kaffi</td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>10:00 AM - 11:00 AM</td>
-                            <td>Keynote: The Future of Robotics</td>
-                            <td>Conference Room A</td>
+                            <td>9:00 - 11:45</td>
+                            <td>Tilkynnt síðar</td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>11:00 AM - 12:00 PM</td>
-                            <td>Workshop: Cybersecurity</td>
-                            <td>Conference Room B</td>
+                            <td>11:45 - 12:45</td>
+                            <td>Hádegismatur</td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>12:00 PM - 1:00 PM</td>
-                            <td>Lunch Break</td>
-                            <td>Dining Area</td>
+                            <td>12:45 - 14:55</td>
+                            <td>Tilkynnt síðar</td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>1:00 PM - 2:00 PM</td>
-                            <td>Panel: Women in Tech</td>
-                            <td>Conference Room A</td>
+                            <td>14:55 - 15:20</td>
+                            <td>Kaffi</td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td>2:00 PM - 3:00 PM</td>
-                            <td>Interactive Session: AR/VR</td>
-                            <td>Conference Room B</td>
-                        </tr>
-                        <tr>
-                            <td>3:00 PM - 4:00 PM</td>
-                            <td>Closing Ceremony</td>
-                            <td>Main Hall</td>
+                            <td>15:20 - 17:40</td>
+                            <td>Tilkynnt síðar</td>
+                            <td></td>
                         </tr>
                     </tbody>
                 </table>
