--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,6 +86,31 @@ nav ul li a:hover {
 	color: green;
 }
 
+nav ul li .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+nav ul li .dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+nav ul li .dropdown-content a:hover {
+    background-color: darkgreen;
+}
+
+nav ul li:hover .dropdown-content {
+    display: block;
+}
+
 main {
     padding: 20px;
     text-align: center;
