--- a/en/partials/schedule.html
+++ b/en/partials/schedule.html
@@ -1,7 +1,7 @@
 <div class="schedule-container">
-            <h2>Dagskrá</h2>
+            <h2>Schedule</h2>
             <div class="day-schedule">
-                <h3>Day 1 - 11 Október - Industrial Hemp</h3>
+                <h3>Day 1 - 11 October - Industrial Hemp</h3>
                 <table>
                     <thead>
                         <tr>
@@ -45,13 +45,13 @@
                 </table>
             </div>
             <div class="day-schedule">
-                <h3>Day 2 - 12 Október - Lyfjahampur</h3>
+                <h3>Day 2 - 12 October - Medical hemp</h3>
                 <table>
                     <thead>
                         <tr>
-                            <th>Tími</th>
-                            <th>Viðburður</th>
-                            <th>Staðsetning</th>
+                            <th>Time</th>
+                            <th>Event/Speaker</th>
+                            <th>Location</th>
                         </tr>
                     </thead>
                     <tbody>
