--- a/partials/media.html
+++ b/partials/media.html
@@ -1,12 +1,12 @@
 <h2>Media</h2>
         <div class="category">
-            <h3>Drug Control and Legislation</h3>
+            <h3>Löggjöf og stjórn</h3>
             <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/hJd1Uqg1rl4?si=8tr4ZhIny5_1ai2Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
         <div class="category">
-            <h3>Medical Uses of Hemp Plant</h3>
+            <h3>Lyfjanýting hamps</h3>
             <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/0HvSO1lMVL0?si=IZRjWbqNQg9tufAB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
