Update bios and images

--- a/partials/speakers.html
+++ b/partials/speakers.html
@@ -9,6 +9,7 @@
 <div hx-get="/speakers/magnus.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/maren.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/nando.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/niel.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/norberto.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/pavel.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/rene.html" class="speaker-text" hx-trigger="load"></div>
