remove clemmie, add Neil

--- a/en/partials/speakers.html
+++ b/en/partials/speakers.html
@@ -1,18 +1,23 @@
 <h2>Speakers</h2>
 <div class="speakers">
-<div hx-get="/speakers/bozidar.html" class="speaker-text" hx-trigger="load"></div>
+  <div class="category">
+    <h3>Day 1 - Industry</h3>
 <div hx-get="/speakers/jamie.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/speakers/jasna.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/jeff.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/jeremy.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/speakers/lumir.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/speakers/magnus.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/maren.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/nando.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/pavel.html" class="speaker-text" hx-trigger="load"></div>
+    </div>
+  <div class="category">
+    <h3>Day 2 - Medical</h3>
+<div hx-get="/speakers/bozidar.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/jasna.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/lumir.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/magnus.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/neil.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/norberto.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/speakers/pavel.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/speakers/rene.html" class="speaker-text" hx-trigger="load"></div>
-<div hx-get="/speakers/clemmie.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/rachel.html" class="speaker-text" hx-trigger="load"></div>
+<div hx-get="/speakers/rene.html" class="speaker-text" hx-trigger="load"></div>
+    </div>
 </div>
