--- a/styles/styles.css
+++ b/styles/styles.css
@@ -151,7 +151,9 @@ footer {
 }
 
 .category {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 .category h3 {
