--- a/en/partials/media.html
+++ b/en/partials/media.html
@@ -13,6 +13,9 @@
             <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/-CJcjxdTcoY?si=1UT1PLeFYL0UCCir" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
+            <div class="video">
+                <iframe width="560" height="315" src="https://player.vimeo.com/video/307950409?title=0" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" data-ready="true"></iframe>
+            </div>
         </div>
 
 
