--- a/en/partials/schedule.html
+++ b/en/partials/schedule.html
@@ -51,7 +51,7 @@
                         <tr>
                             <th>Time</th>
                             <th>Event/Speaker</th>
-                            <th>Location</th>
+                            <th>Topic</th>
                         </tr>
                     </thead>
                     <tbody>
