--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -51,7 +51,7 @@
                         <tr>
                             <th>Tími</th>
                             <th>Viðburður</th>
-                            <th>Staðsetning</th>
+                            <th>Umræðuefni</th>
                         </tr>
                     </thead>
                     <tbody>
