Add bios/images Bozidar, Anna/Jan and Jamie Pearson

--- a/partials/speakers.html
+++ b/partials/speakers.html
@@ -2,6 +2,7 @@
 <div class="speakers">
   <div class="category">
     <h3>Dagur 1 - Iðnaðarhampur</h3>
+<div hx-get="/speakers/annajan.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/jamie.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/jeff.html" class="speaker-text" hx-trigger="load"></div>
 <div hx-get="/speakers/jeremy.html" class="speaker-text" hx-trigger="load"></div>
